examples/tests/semantic/fail/wrongForLoopBody.tig
let 
    var taylor := "Taylor"
in 
    for index := 1 to 3 do ("nope")
end 